objects/Q4__Qvidian_Content__c.object
<CustomObject>
    <fields>
        <fullName>Q4__Content_Full_Name__c</fullName>
        <label>Content Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q4__Content_Provider__c</fullName>
        <label>Content Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q4__Content_Source__c</fullName>
        <label>Content Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q4__External_Content_Identifier__c</fullName>
        <label>External Content Identifier</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q4__Qvidian_Content_Id__c</fullName>
        <externalId>true</externalId>
        <label>Qvidian Content Id</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Qvidian Content</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Content Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Qvidian Content</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>